# geochat-

./: db.py  index.html  llm.py  main.py  pyproject.toml  rag.py  validator.py
data/: atms.geojson  banks.geojson  churches.geojson  hospitals.geojson  metro_stations.geojson  mosques.geojson  pharmacies.geojson  restaurants.geojson  schools.geojson  universities.geojson
