[project]
name = "geochat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "geoalchemy2>=0.20.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "sqlglot>=30.12.0",
    "uvicorn>=0.49.0",
]
